20 Oct, 2018
update: a few more of the admin pages
add: missing file promo.php
update: most of the admin pages
fix: bug bugs.php
update: don't show pager when not more than 1 page staffbox.php, bugs.php
update: align checkboxes upload.php
update: SCEditor style
update: missing tags from breadcrumbs

18 Oct, 2038
update: FluentPDO, Flysystem, Sass, PostCSS, autoprefixer, node-sas
update: version number package.json
fix: news block icon size
fix: iterate only numeric template folders uglify.php
fix: call image_proxy with width/height when bbcode image tag includes width/height
fix: db insert Post.php
update: missing tags from breadcrumbs

14 Oct, 2018
add: lighter template WIP - will need to rethink AJAX Chat templates
rewrite: breadcrumbs, WIP
replace: get all users with ajax user lookup send_message.php
replace: markItUp.js with SCEditor.js WYSIWYG Editor
remove: jquery.mousewheel.js
move: jquery.flexslider.js to npm
move: tooltipster.js to npm
remove .htaccess files as nginx ignores them
add: new base template
move: themeChanger into template folder to allow modification per template
replace: FormManager.js with genres_show_hide.js
replace: jquery.validator.js with html5 validation
fix: Adminer link in navbar
remove: ipToStorageFormat function

11 Oct, 2018
fix: site_settings.php

10 Oct, 2018
fix: announce.php

02 Sept, 2018
update: database files
remove: image proxy key
update: remove leading dots in cookie_domain example
add: tag @username anywhere
update: add columns year, rating updated from api calls
update: api calls to ajax requests for faster initial page load details.php
update: merge tvmaze title info with episode info
remove: ssluse, determine by site scheme instead

28 Aug, 2018
update: full stop when files.php is missing

27 Aug, 2018
update: add notice if missing files.php

26 Aug, 2018
update: placeholder_image() allow variable size
update: move imdb info to top of page details.php
update: use minimal bulma, only as needed
refactor: navbar.php